frontend: fix wrapping long lines in chrome

--- a/packages/iris-common/src/styles/text.css
+++ b/packages/iris-common/src/styles/text.css
@@ -1,5 +1,5 @@
 :root {
-	@apply hyphens-auto;
+	@apply hyphens-auto break-all;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
